--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,6 +1,7 @@
-server.port:9111
+server.port=9102
 
 spring.application.name=eureka-server
-eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
-eureka.client.registerWithEureka:false
-eureka.client.fetchRegistry:false
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+org.springframework.boot=spring-boot-starter-jersey
