--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -13,3 +13,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+#Nos configurations
+#mes-configs.limitDeProduits= 3
+
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
