--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -1,6 +1,6 @@
 server.port=9001
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/biliotheque
+spring.datasource.url=jdbc:postgresql://localhost:5433/bibliotheque
 
 spring.datasource.username=postgres
 
