--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -19,3 +19,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.main.allow-bean-definition-overriding=true
