--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -12,14 +12,14 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.thymeleaf.cache=false
+spring.main.allow-bean-definition-overriding=true
 #Nos configurations
 #mes-configs.limitDeProduits= 3
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.main.allow-bean-definition-overriding=true
