updated microservice-book properties

--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -1,3 +1,5 @@
+spring.application.name=microservice-books
+
 server.port=9001
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/bibliotheque
