--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -4,3 +4,4 @@ server.port=8080
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
+spring.main.allow-bean-definition-overriding=true
