updated zuul properties

--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,8 +1,17 @@
 server.port=9004
-ribbon.ReadTimeout=60000
+
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 #Spring Security
 spring.security.user.name=utilisateur
-spring.security.user.password=mdp
+spring.security.user.password=mdpk
+
+###socket??
+zuul.host.socket-timeout-millis=60000
+#HTTP??????Hystrix??
+zuul.host.connect-timeout-millis=10000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+#?????????
+ribbon.ConnectTimeout=60000
+ribbon.ReadTimeout=60000
