--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -1,6 +1,7 @@
 spring.application.name=microservice-books
 
-server.port=9001
+#Ribbon
+user.ribbon.listOfServers=localhost:9001
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/bibliotheque
 
