--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -5,9 +5,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 #Spring Security
 spring.security.user.name=utilisateur
-spring.security.user.password=mdpk
+spring.security.user.password=mdp
 
-zuul.host.socket-timeout-millis=60000
-zuul.host.connect-timeout-millis=60000
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-ribbon.ReadTimeout=60000
+feign.client.config.default.connectTimeout=160000000
+feign.client.config.default.readTimeout=160000000
