--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -1,5 +1,4 @@
-#Ribbon
-user.ribbon.listOfServers=localhost:9001
+server.port=9001
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/bibliotheque
 
