--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -25,4 +25,5 @@ spring.main.allow-bean-definition-overriding=true
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-
+feign.client.config.default.connectTimeout=160000000
+feign.client.config.default.readTimeout=160000000
