--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -4,3 +4,5 @@ server.port=8090
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.main.allow-bean-definition-overriding=true
+feign.client.config.default.connectTimeout=160000000
+feign.client.config.default.readTimeout=160000000
