--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -6,3 +6,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.main.allow-bean-definition-overriding=true
 feign.client.config.default.connectTimeout=160000000
 feign.client.config.default.readTimeout=160000000
+ribbon.ReadTimeout=60000
