--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -27,3 +27,4 @@ spring.main.allow-bean-definition-overriding=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 feign.client.config.default.connectTimeout=160000000
 feign.client.config.default.readTimeout=160000000
+spring.cloud.loadbalancer.ribbon.enabled=false
