--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -7,3 +7,4 @@ spring.main.allow-bean-definition-overriding=true
 feign.client.config.default.connectTimeout=160000000
 feign.client.config.default.readTimeout=160000000
 ribbon.ReadTimeout=60000
+spring.cloud.loadbalancer.ribbon.enabled=false
