--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -9,3 +9,4 @@ spring.security.user.password=mdp
 
 feign.client.config.default.connectTimeout=160000000
 feign.client.config.default.readTimeout=160000000
+spring.cloud.loadbalancer.ribbon.enabled=false
