--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -28,3 +28,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 feign.client.config.default.connectTimeout=160000000
 feign.client.config.default.readTimeout=160000000
 spring.cloud.loadbalancer.ribbon.enabled=false
+
+spring.batch.job.enabled=false
+spring.batch.initialize-schema=always
