added spring mail

--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -31,3 +31,14 @@ spring.cloud.loadbalancer.ribbon.enabled=false
 
 spring.batch.job.enabled=false
 spring.batch.initialize-schema=always
+
+#spring mail config
+spring.mail.default-encoding=UTF-8
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.username=projet7ocrbiliotheque@gmail.com
+spring.mail.password=projet7OCR
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.test-connection=false
