--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -36,7 +36,7 @@ spring.batch.initialize-schema=always
 spring.mail.default-encoding=UTF-8
 spring.mail.protocol=smtp
 spring.mail.host=smtp.gmail.com
-spring.mail.username=projet7ocrbiliotheque@gmail.com
+spring.mail.username=projet7bis@gmail.com
 spring.mail.password=projet7OCR
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
